Bug 886057 - Make sure frame tree is up-to-date before nsIDOMWindowUtils dispatches events via PresShell. r=smaug, a=bajaj